package Schema.Table;

message TableField {
  enum Type {
    INTEGER,
    LLONG,
    DOUBLE,
    BOOL,
    STRING,
    CHARARR,
  }

  optional string name = 1;
  optional int32 index = 2;
  optional Type type = 3;
  optional int32 size = 4;  // Only meaningful for CharArray - length limit.
}

message TableSchema {
  optional string name = 1;
  repeated TableField fields = 2;

  // TODO: foreign keys, constraints, assertions ...
}
